# azulsim

./: Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
apps/: main.py  test.py
azulsim/core/: __init__.py  factory.py  game.py  random.py  tiles.py
azulsim/core/board/: __init__.py  board.py  floor.py  pattern.py  scoring.py  wall.py
azulsim/core/domain/: __init__.py  board.py  tiles.py  types.py
azulsim/core/domain/types/: __init__.py  board.py  game.py  tiles.py
azulsim/core/game/: __init__.py  factory_offer.py  round_setup.py  state.py  wall_tiling.py
azulsim/core/phases/: __init__.py  end_of_game.py  factory_offer.py  round_setup.py  wall_tiling.py
azulsim/shell/: __init__.py
azulsim/shell/terminal/: __init__.py  format.py
azulsim/test/: __init__.py  test_example.py
azulsim/test/board/: __init__.py  test_floor.py  test_wall.py
azulsim/test/core/: __init__.py  test_factory.py  test_tiles.py
azulsim/test/core/board/: test_floor.py  test_pattern.py  test_scoring.py  test_wall.py
azulsim/test/core/game/: __init__.py  test_round_setup.py  test_wall_tiling.py
azulsim/test/core/game/factory_offer/: test_phase_end.py  test_place_tiles.py  test_select_tiles.py
azulsim/test/core/game/round_setup/: test_game_end.py  test_reset_tile_pools.py
azulsim/test/core/phases/: test_wall_tiling.py
azulsim/test/core/phases/end_of_game/: __init__.py  test_score_bonuses.py
azulsim/test/core/phases/factory_offer/: __init__.py  test_phase_end.py  test_place_tiles.py  test_select_tiles.py
docs/: sequence.puml
tools/docker/: Dockerfile
(+5 files in other folders)
